tests/compose_backend_fail/unknown_field.stderr
error: field `gpuu` not declared in struct body
  --> tests/compose_backend_fail/unknown_field.rs:24:17
   |
24 |         blit => gpuu,
   |                 ^^^^
